# pr-reviewer

./: .gitignore  CLAUDE.md  DETERMINISM_TEST_RESULTS.md  Dockerfile  ENTERPRISE_INTEGRATION.md  README.md  README_QUICK_WINS.md  SKILL.md  TESTING_DETERMINISM.md  TEST_COMPLETE.md  bitbucket-pipelines.yml  config.enterprise.yaml  config.example.yaml  determinism_comparison_report.md  pyproject.toml
.github/agents/: code-reviewer.agent.md
.github/workflows/: pr-review.yml
.pr-reviewer/: suppressions.json
.pr-reviewer/adapters/: jira.py  snyk.py  sonar.py
.roo/modes/: code-reviewer.json
deploy/: README.md
deploy/k8s/: hpa.yaml  job-template.yaml  namespace.yaml  rbac.yaml  redis.yaml  secrets.yaml  webhook-deploy.yaml  worker-deployment.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus-servicemonitor.yaml
deploy/webhook/: Dockerfile  app.py  app_v2.py
deploy/worker/: worker.py
docs/: BEFORE_AFTER_EXAMPLE.md  ENTERPRISE_OPTIMIZATION_SUMMARY.md  ENTERPRISE_QUICK_START.md  ENTERPRISE_SCALE_DEPLOYMENT.md  OPERATIONS_QUICK_REFERENCE.md  QUICK_WINS_SUMMARY.md  README.md  architecture.md  determinism-analysis.md  executive-overview.md
docs/diagrams/: eks-architecture.drawio  eks-architecture.md
mcp_server/: README.md  server.py
skill/: FEEDBACK_SKILL.md  ONBOARD_SKILL.md  SKILL.md  post_review.py
src/pr_reviewer/: __init__.py  cli.py  config.py  models.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/fixtures/: sample.patch
tests/integration/: test_repo_context_agent.py  test_tool_executor.py
tests/unit/: test_cache.py  (+8 more)
(+21 files in other folders)
